[tool.poetry]
name = "kython-docs"
version = "3.9"
description = "Kython Documentation"
authors = ["Laura S Dickinson <l@veriny.tf>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^2.3.1"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
